--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "UCSF"
+title: "UCSF R"
 
 # Contact email address.
 email: joanna.kang@ucsf.edu
